--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <button onclick="rollDice()" class="roll-button">Roll Dice</button>
     </div>
-    <script src="./index.js"></script>
+    <script src="/index.js"></script>
     <!-- <script type="module" src="/index.js"></script> -->
   </body>
 
