update index.html to include relative script path for index.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
       rel="stylesheet"
     />
+      <script type="text/javascript" src="./js/index.js"></script>
   </head>
   <body>
     <div class="container">
@@ -26,7 +27,7 @@
     <div class="container">
       <button onclick="rollDice()" class="roll-button">Roll Dice</button>
     </div>
-    <script src="/js/index.js"></script>
+  
   </body>
 
   <footer>www 🎲 Quintice 🎲 com</footer>
