--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dicee</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet" />
-  <script type="text/javascript" src="script.js"></script>
+  <script src="index.js"></script>
 </head>
 
 <body>
